kube/backend-deployment-ecommerce.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: backendmainn
  namespace: emain

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      nodeSelector:
        kubernetes.io/hostname: aegon-targaryen

      containers:
        - name: ecommerce-backend
          image: manojkl2006/mern-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
