kube/frontend-deployment-ecommerce.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: frontendmainn
  namespace: emain

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      nodeSelector:
        kubernetes.io/hostname: aegon-targaryen

      containers:
        - name: ecommerce-frontend
          image: manojkl2006/mern-frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
