kube/backend-service-main.yaml
apiVersion: v1

kind: Service

metadata:
  name: backend
  namespace: emain

spec:
  selector:
    app: backend

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
