kube/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: emain

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
